<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Travel Companion</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_itinerary">Delete Itinerary</string>
    <string name="action_modify_itinerary">Modify Itinerary</string>
    <string name="text_current_itinerary">Current Itinerary</string>
    <string name="text_select_country">Select Country</string>
    <string name="text_depart_date">Depart Date</string>
    <string name="return_date">Return Date</string>
    <string name="budget_optional">Budget (Optional)</string>
    <string name="text_create_trip">Create Trip</string>
    <string name="text_place">Place</string>
    <string name="trip_name">Trip\'s name</string>
    <string name="title_activity_trip">TripActivity</string>
    <string name="text_itinerary_name">Itinerary Name</string>
    <string name="text_time">Time</string>
    <string name="text_date">Date</string>
    <string name="text_place_name">Place Name</string>
    <string name="not_available">N/A</string>
    <string name="text_note">Note</string>
    <string name="text_create_itinerary">Create Itinerary</string>
    <string name="text_permission_location">Please enable permission for Location to use this feature</string>
    <string name="text_comments">Comments</string>
    <string name="text_create_new_trip">Create New Trip</string>
    <string name="text_delete_item">Are you sure?</string>
    <string name="text_are_you_sure_delete">Are you sure you want to delete this itinerary?</string>
    <string name="text_ok">OK</string>
    <string name="text_modify_itinerary">Modify Itinerary</string>
    <string name="format_temperature"><xliff:g id="temp">%d</xliff:g>\u00B0</string>

    <!-- Weather status-->
    <string name="text_high">High</string>
    <string name="text_low">Low</string>
    <string name="text_weather_tornado">tornado</string>
    <string name="tornado">tornado</string>
    <string name="tropical_storm">tropical storm</string>
    <string name="hurricane">hurricane</string>
    <string name="severe_thunderstorms">severe thunderstorms</string>
    <string name="thunderstorms">thunderstorms</string>
    <string name="mixed_rain_and_snow">mixed rain and snow</string>
    <string name="mixed_rain_and_sleet">mixed rain and sleet</string>
    <string name="mixed_snow_and_sleet">mixed snow and sleet</string>
    <string name="freezing_drizzle">freezing drizzle</string>
    <string name="drizzle">drizzle</string>
    <string name="freezing_rain">freezing rain</string>
    <string name="showers">showers</string>
    <string name="showers2">showers</string>
    <string name="snow_flurries">snow flurries</string>
    <string name="light_snow_showers">light snow showers</string>
    <string name="blowing_snow">blowing snow</string>
    <string name="snow">snow</string>
    <string name="hail">hail</string>
    <string name="sleet">sleet</string>
    <string name="dust">dust</string>
    <string name="foggy">foggy</string>
    <string name="haze">haze</string>
    <string name="smoky">smoky</string>
    <string name="blustery">blustery</string>
    <string name="windy">windy</string>
    <string name="cold">cold</string>
    <string name="cloudy">cloudy</string>
    <string name="mostly_cloudy_night">mostly cloudy (night)</string>
    <string name="mostly_cloudy_day">mostly cloudy (day)</string>
    <string name="partly_cloudy_night">partly cloudy (night)</string>
    <string name="partly_cloudy_day">partly cloudy (day)</string>
    <string name="clear_night">clear (night)</string>
    <string name="sunny">sunny</string>
    <string name="fair_night">fair (night)</string>
    <string name="fair_day">fair (day)</string>
    <string name="mixed_rain_and_hail">mixed rain and hail</string>
    <string name="hot">hot</string>
    <string name="isolated_thunderstorms">isolated thunderstorms</string>
    <string name="scattered_thunderstorms">scattered thunderstorms</string>
    <string name="scattered_thunderstorms2">scattered thunderstorms</string>
    <string name="scattered_showers">scattered showers</string>
    <string name="heavy_snow">heavy snow</string>
    <string name="scattered_snow_showers">scattered snow showers</string>
    <string name="heavy_snow2">heavy snow</string>
    <string name="partly_cloudy">partly cloudy</string>
    <string name="thundershowers">thundershowers</string>
    <string name="snow_showers">snow showers</string>
    <string name="isolated_thundershowers">isolated thundershowers</string>
    <string name="weather_not_available">not available</string>
    <string name="text_no_trip_is_created_yet">No trip is created yet</string>
    <string name="text_no_itinerary_is_created_yet">No itinerary is created yet</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">com.liewjuntung</string>
    <string name="content_authority" translatable="false">com.liewjuntung.travelcompanion</string>
    <string name="action_travelcompanion_update">ACTION_TRAVELCOMPANION_UPDATE</string>

    <!--widget id pref name-->
    <string name="widget_trip_pref_name" formatted="false" translatable="false">widget_pref_%d</string>
    <string name="trip_to_cd">Trip to %s</string>
    <string name="text_trip_image">trip image</string>
    <string name="trans_main" translatable="false">trans_main</string>
    <string name="text_init_place_picker">Initialize place picker</string>
    <string name="text_empty">empty</string>
</resources>
