<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="trip"
            type="com.liewjuntung.travelcompanion.models.Trip" />
    </data>
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"

        tools:context="com.liewjuntung.travelcompanion.ui.trip.TripActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                >
                <ImageView
                    android:id="@+id/travel_image"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:contentDescription="@string/text_trip_image"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/trans_main"
                    app:imageUrl="@{trip.image}"
                    app:layout_collapseMode="parallax"
                    />
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_detail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin"
                    />
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <include
            android:id="@+id/content"
            layout="@layout/content_trip"
            app:trip="@{trip}"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/text_create_itinerary"
            app:layout_behavior="com.liewjuntung.travelcompanion.utility.ScrollingFABBehavior"
            app:srcCompat="@drawable/ic_add_24dp"
            />

    </android.support.design.widget.CoordinatorLayout>
</layout>
