<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.liewjuntung.travelcompanion.ui.modify_itinerary.ModifyItineraryViewModel"/>

        <import type="android.view.View"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/activity_modify_trip"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:fitsSystemWindows="true"
                  android:orientation="vertical"
                  tools:context="com.liewjuntung.travelcompanion.ui.modify_itinerary.CreateItineraryActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <include
                android:id="@+id/toolbar"
                layout="@layout/main_toolbar"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView

            android:id="@+id/modify_itinerary_scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"

                app:columnCount="3">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="14dp"
                    android:layout_marginEnd="@dimen/drawable_top_bottom_margin"
                    android:layout_marginStart="@dimen/drawable_top_bottom_margin"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_directions_bike_black_24dp"
                    android:contentDescription="@string/text_itinerary_name"
                    app:layout_columnSpan="1"
                    app:layout_gravity="fill"
                    />

                <android.support.design.widget.TextInputLayout
                    app:layout_columnSpan="2"
                    app:layout_columnWeight="2">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{vm.itineraryAfterTextChanged}"
                        android:hint="@string/text_itinerary_name"
                        android:inputType="text"
                        android:text="@{vm.name}"
                        tools:text="2000"
                        />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="@dimen/drawable_top_bottom_margin"
                    android:layout_marginEnd="@dimen/drawable_top_bottom_margin"
                    android:layout_marginStart="@dimen/drawable_top_bottom_margin"
                    android:layout_marginTop="@dimen/drawable_top_bottom_margin"
                    android:background="@drawable/ic_event_black_24dp"
                    android:contentDescription="@string/text_date"
                    app:layout_columnSpan="1"
                    app:layout_gravity="fill"
                    />

                <Button
                    style="@style/AppTheme.Spinner"
                    android:hint="@string/text_date"
                    android:onClick="@{vm.clickDateDialog}"
                    android:text="@{vm.date}"
                    app:layout_columnSpan="2"
                    app:layout_columnWeight="2"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="@dimen/drawable_top_bottom_margin"
                    android:layout_marginEnd="@dimen/drawable_top_bottom_margin"
                    android:layout_marginStart="@dimen/drawable_top_bottom_margin"
                    android:layout_marginTop="@dimen/drawable_top_bottom_margin"
                    android:contentDescription="@string/text_time"
                    android:src="@drawable/ic_access_time_black_24dp"
                    app:layout_columnSpan="1"
                    app:layout_gravity="fill"
                    />

                <Button
                    style="@style/AppTheme.Spinner"
                    android:hint="@string/text_time"
                    android:onClick="@{vm.clickTimeDialog}"
                    android:text="@{vm.displayTime}"
                    app:layout_columnSpan="2"
                    app:layout_columnWeight="2"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="14dp"
                    android:layout_marginEnd="@dimen/drawable_top_bottom_margin"
                    android:layout_marginStart="@dimen/drawable_top_bottom_margin"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_map_black_24dp"
                    android:contentDescription="@string/text_place"
                    app:layout_columnSpan="1"
                    app:layout_gravity="fill"
                    />

                <android.support.design.widget.TextInputLayout
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="2"
                    >

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{vm.placeAfterTextChanged}"
                        android:hint="@string/text_place_name"
                        android:inputType="text"
                        android:text="@{vm.place}"
                        tools:text="2000"/>
                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:id="@+id/modify_trip_place_button"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    >

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginBottom="14dp"
                        android:layout_marginEnd="@dimen/drawable_top_bottom_margin"
                        android:layout_marginStart="@dimen/drawable_top_bottom_margin"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/ic_place_black_24dp"
                        android:contentDescription="@string/text_init_place_picker"
                        app:layout_columnSpan="1"
                        app:layout_gravity="fill"/>
                </FrameLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="14dp"
                    android:layout_marginEnd="@dimen/drawable_top_bottom_margin"
                    android:layout_marginStart="@dimen/drawable_top_bottom_margin"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_insert_comment_black_24dp"
                    android:contentDescription="@string/text_note"
                    app:layout_columnSpan="1"
                    app:layout_gravity="fill"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_columnSpan="2"
                    app:layout_columnWeight="2"
                    app:passwordToggleEnabled="true"
                    >

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{vm.noteAfterTextChanged}"
                        android:hint="@string/text_note"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@{vm.note}"
                        tools:text="2000"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.GridLayout
                    android:id="@+id/weather_grid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:layout_marginEnd="@dimen/drawable_top_bottom_margin"
                    android:layout_marginStart="@dimen/drawable_top_bottom_margin"
                    android:layout_marginTop="20dp"
                    android:visibility="@{vm.hasWeatherForecast?View.VISIBLE:View.GONE}"
                    app:columnCount="2"
                    app:layout_columnSpan="3"
                    app:layout_columnWeight="1"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        app:layout_columnSpan="2"
                        app:loadWeather="@{vm.weatherCode}"
                        tools:ignore="ContentDescription"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@{vm.weatherText}"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        app:layout_columnSpan="2"
                        tools:text="30 C"

                        />

                    <TextView
                        android:text="@string/text_high"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        app:layout_columnSpan="1"
                        app:layout_columnWeight="1"
                        />

                    <TextView
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        app:layout_columnSpan="1"
                        app:layout_columnWeight="1"
                        app:loadWeatherTemp="@{vm.tempHigh}"
                        tools:text="60"
                        />

                    <TextView
                        android:text="@string/text_low"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        app:layout_columnSpan="1"
                        app:layout_columnWeight="1"
                        />

                    <TextView
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        app:layout_columnSpan="1"
                        app:layout_columnWeight="1"
                        app:loadWeatherTemp="@{vm.tempLow}"
                        />
                </android.support.v7.widget.GridLayout>
            </android.support.v7.widget.GridLayout>
        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:enabled="@{vm.validated}"
            android:onClick="@{vm.saveData}"
            android:text="@string/text_modify_itinerary"/>
    </LinearLayout>
</layout>
