<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.liewjuntung.travelcompanion.ui.create_trip.CreateTripViewModel"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/activity_create_trip"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:fitsSystemWindows="true"
                  android:orientation="vertical"
                  tools:context="com.liewjuntung.travelcompanion.ui.create_trip.CreateTripActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <include
                android:id="@+id/toolbar"
                layout="@layout/main_toolbar"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="2">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="@dimen/drawable_top_bottom_margin"
                    android:layout_marginEnd="@dimen/drawable_top_bottom_margin"
                    android:layout_marginStart="@dimen/drawable_top_bottom_margin"
                    android:layout_marginTop="@dimen/drawable_top_bottom_margin"
                    android:contentDescription="@{vm.country}"
                    app:drawables="@{vm.flag}"
                    app:layout_columnSpan="1"
                    app:layout_gravity="fill"
                    />

                <Button
                    style="@style/AppTheme.Spinner"
                    android:hint="@string/text_select_country"
                    android:onClick="@{vm.clickCountryDialog}"
                    android:text="@{vm.country}"
                    android:textColor="@color/primary_text"
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="2"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="@dimen/drawable_top_bottom_margin"
                    android:layout_marginEnd="@dimen/drawable_top_bottom_margin"
                    android:layout_marginStart="@dimen/drawable_top_bottom_margin"
                    android:layout_marginTop="@dimen/drawable_top_bottom_margin"
                    android:background="@drawable/ic_event_black_24dp"
                    android:contentDescription="@string/text_depart_date"
                    app:layout_columnSpan="1"
                    app:layout_gravity="fill"
                    />

                <Button
                    style="@style/AppTheme.Spinner"
                    android:hint="@string/text_depart_date"
                    android:onClick="@{vm.clickFromDateDialog}"
                    android:text="@{vm.dateFrom}"
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="2"/>

                <Space
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="@dimen/drawable_top_bottom_margin"
                    android:layout_marginEnd="@dimen/drawable_top_bottom_margin"
                    android:layout_marginStart="@dimen/drawable_top_bottom_margin"
                    android:layout_marginTop="@dimen/drawable_top_bottom_margin"
                    app:layout_columnSpan="1"
                    app:layout_gravity="fill"/>

                <Button
                    style="@style/AppTheme.Spinner"
                    android:hint="@string/return_date"
                    android:onClick="@{vm.clickToDateDialog}"
                    android:text="@{vm.dateUntil}"
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="2"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="14dp"
                    android:layout_marginEnd="@dimen/drawable_top_bottom_margin"
                    android:layout_marginStart="@dimen/drawable_top_bottom_margin"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_subject_black_24dp"
                    android:contentDescription="@string/trip_name"
                    app:layout_columnSpan="1"
                    />

                <android.support.design.widget.TextInputLayout
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="2">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:afterTextChanged="@{vm.afterTextChanged}"
                        android:hint="@string/trip_name"
                        android:text="@{vm.name}"
                        tools:text="2000"/>
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="14dp"
                    android:layout_marginEnd="@dimen/drawable_top_bottom_margin"
                    android:layout_marginStart="@dimen/drawable_top_bottom_margin"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_attach_money_black_24dp"
                    android:contentDescription="@string/budget_optional"
                    app:layout_columnSpan="1"

                    />

                <android.support.design.widget.TextInputLayout
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="2">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/budget_optional"
                        tools:text="2000"/>
                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.GridLayout>
        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:enabled="@{vm.validated}"
            android:onClick="@{vm.saveData}"
            android:text="@string/text_create_trip"/>

    </LinearLayout>
</layout>
